--- a/About.html
+++ b/About.html
@@ -1,15 +1,17 @@
 <html>
 
 <head>
+    <title>The Nekros</title>
+    <meta name="description" content="This is the description">
 </head>
 
 <body>
     <header>
         <nav>
             <ul>
-                <li>HOME</li>
-                <li>STORE</li>
-                <li>ABOUT</li>
+                <li><a href="Index.html">HOME</a></li>
+                <li><a href="Store.html">STORE</a></li>
+                <li><a href="About.html">ABOUT</a></li>
             </ul>
         </nav>
         <hr>
@@ -17,22 +19,30 @@
     </header>
     <section>
         <h2>ABOUT</h2>
-        <p>Nekrogoblikon is an American comedy metal band based in Los Angeles, California. 
-            The group was formed in 2006, by Tim Lyakhovetskiy and Nicky Calonne. 
-            The band has released four full-length albums, Goblin Island, Stench, Heavy Meta, and Welcome to Bonkers and one EP, Power. 
+        <p>Nekrogoblikon is an American comedy metal band based in Los Angeles, California.
+            The group was formed in 2006, by Tim Lyakhovetskiy and Nicky Calonne.
+            The band has released four full-length albums, Goblin Island, Stench, Heavy Meta, and Welcome to Bonkers and
+            one EP, Power.
             The band's music centers around goblins.</p>
         <img src="Images/nekrogoblikonpowercore.png">
-        <p>Nekrogoblikon was formed in 2006 by Nicky Calonne and Tim Lyakhovetskiy in Palo Alto, California. 
-            The two of them recorded Nekrogoblikon's first album, Goblin Island, in Lyakhovetskiy's basement. 
-            On his return to school at the University of California, Santa Barbara, Lyakhovetskiy found Ashleigh Carracino, Alex Duddy, Spencer Bartz, Alex Alereza, and Austin Nickel to form the rest of the band. 
+        <p>Nekrogoblikon was formed in 2006 by Nicky Calonne and Tim Lyakhovetskiy in Palo Alto, California.
+            The two of them recorded Nekrogoblikon's first album, Goblin Island, in Lyakhovetskiy's basement.
+            On his return to school at the University of California, Santa Barbara, Lyakhovetskiy found Ashleigh
+            Carracino, Alex Duddy, Spencer Bartz, Alex Alereza, and Austin Nickel to form the rest of the band.
             The group played eleven shows before Bartz moved to Japan, and was replaced by Eddie Trager.</p>
     </section>
     <footer>
         <h3>Nekrogoblikon</h3>
         <ul>
-            <li><img src="Images/YouTube.png"></li>
-            <li><img src="Images/spotify_logojpg.jpg"></li>
-            <li><img src="Images/facebook.png"></li>
+                <li><a href="https://www.youtube.com/" target="_blank">
+                    <img src="Images/YouTube.png">
+                </a></li>
+                <li><a href="https://www.spotify.com/" target="_blank">
+                    <img src="Images/spotify.png">
+                </a></li>
+                <li><a href="https://www.facebook.com/" target="_blank">
+                    <img src="Images/facebook.png">
+                </a></li>
         </ul>
     </footer>
 </body>
