--- a/Index.html
+++ b/Index.html
@@ -1,42 +1,109 @@
 <html>
 
 <head>
+    <title>The Nekros | About</title>
+    <meta name="description" content="This is the description">
 </head>
 
 <body>
     <header>
         <nav>
             <ul>
-                <li>HOME</li>
-                <li>STORE</li>
-                <li>ABOUT</li>
+                <li><a href="Index.html">HOME</a></li>
+                <li><a href="Store.html">STORE</a></li>
+                <li><a href="About.html">ABOUT</a></li>
             </ul>
         </nav>
         <hr>
         <h1>Nekrogoblikon</h1>
-        <button>Get Our Latest Album</button>
+        <button type="button">Get Our Latest Album</button>
         <br>
         <br>
         <!-- TODO: Create a backgound image later -->
-        <button>&#9658</button>
+        <button type="button">&#9658</button>
     </header>
     <section>
         <h2>TOURS</h2>
         <div>
             <div>
                 <strong>JUL 16</strong>
+                &lt;&gt;
                 <span>DETROIT, MI</span>
+                &lt;&gt;
                 <span>DTE ENERGY MUSIC THEATRE</span>
-                BUY TICKETS
+                &lt;&gt;
+                <button type="button">BUY TICKETS</button>
+                &lt;&gt;
+                <hr>
+            </div>
+            <div>
+                <strong>JUL 19</strong>
+                &lt;&gt;
+                <span>TORONTO, ON</span>
+                &lt;&gt;
+                <span>BUDWEISER STAGE</span>
+                &lt;&gt;
+                <button type="button">BUY TICKETS</button>
+                &lt;&gt;
+                <hr>
+            </div>
+            <div>
+                <strong>JUL 22</strong>
+                &lt;&gt;
+                <span>BRISTOW, VA</span>
+                &lt;&gt;
+                <span>JIGGY LUBE LIVE</span>
+                &lt;&gt;
+                <button type="button">BUY TICKETS</button>
+                &lt;&gt;
+                <hr>
+            </div>
+            <div>
+                <strong>JUL 29</strong>
+                &lt;&gt;
+                <span>PHOENIX, AZ</span>
+                &lt;&gt;
+                <span>AK-CHIN PAVILION</span>
+                &lt;&gt;
+                <button type="button">BUY TICKETS</button>
+                &lt;&gt;
+                <hr>
+            </div>
+            <div>
+                <strong>AUG 2</strong>
+                &lt;&gt;
+                <span>LAS VEGAS, NV</span>
+                &lt;&gt;
+                <span>T-MOBILE ARENA</span>
+                &lt;&gt;
+                <button type="button">BUY TICKETS</button>
+                &lt;&gt;
+                <hr>
+            </div>
+            <div>
+                <strong>AUG 7</strong>
+                &lt;&gt;
+                <span>CONCORD, CA</span>
+                &lt;&gt;
+                <span>CONCORD PAVILION</span>
+                &lt;&gt;
+                <button type="button">BUY TICKETS</button>
+                &lt;&gt;
             </div>
         </div>
     </section>
     <footer>
         <h3>Nekrogoblikon</h3>
         <ul>
-            <li><img src="Images/YouTube.png"></li>
-            <li><img src="Images/spotify.png"></li>
-            <li><img src="Images/facebook.png"></li>
+                <li><a href="https://www.youtube.com/" target="_blank">
+                    <img src="Images/YouTube.png">
+                </a></li>
+                <li><a href="https://www.spotify.com/" target="_blank">
+                    <img src="Images/spotify.png">
+                </a></li>
+                <li><a href="https://www.facebook.com/" target="_blank">
+                    <img src="Images/facebook.png">
+                </a></li>
         </ul>
     </footer>
 </body>
